# semantic-medallion-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  DataLineageAnalysis.ipynb  NEROptimizationTesting.ipynb  README.md  docker-compose.yml  local_run.sh  pyproject.toml  tmp.py
.github/workflows/: ci-cd.yml  pr-tests.yml
academic_study/: generate_ner_data.py  ner_optimization_testing.md  ner_optimization_testing.py
academic_study/DataLineageAnalysis/: DataLineageAnalysis.md
academic_study/NEROptimizationTesting/: NEROptimizationTesting.md
academic_study/data/: ner_test_data.csv
data/: sources.md
data/known_entities/: known_entites_org.csv  known_entities_loc.csv  known_entities_per.csv
data/metabase_questions/: Entity_Analysis.sql  Entity_Entity_Sentiment.sql  Entity_NewsAPI_Analysis.sql  Entity_NewsAPI_Insights.sql  Entity_NewsAPI_Sentiment.sql  Entity_NewsAPI_Trends.sql
data/sql_exports/: newsapi-04-06-2025.sql
docker/: docker-compose.yml
docs/: DEPLOYMENT.md  INFRASTRUCTURE.md  architecture.md  deployment.md  development.md  infrastructure.md
infrastructure/terraform/: database.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
semantic_medallion_data_platform/: template.py
semantic_medallion_data_platform/bronze/: brz_01_extract_kaggle_datasets.py  brz_01_extract_known_entities.py  brz_01_extract_newsapi.py  template.py
semantic_medallion_data_platform/common/: log_handler.py  nlp.py  pyspark.py
semantic_medallion_data_platform/config/: env.py
tests/: conftest.py
tests/unit/: test_bronze_ingest.py  test_env_config.py  (+2 more)
(+7 files in other folders)
