[tool.poetry]
name = "semantic-medallion-data-platform"
version = "0.1.0"
description = "A medallion architecture data lake platform"
authors = ["ByteMeDirk <bytemdedirk@proton.me>"]
readme = "README.md"
packages = [{include = "semantic_medallion_data_platform"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyspark = "^3.4.0"
delta-spark = "^2.4.0"
google-cloud-storage = "^2.9.0"
google-cloud-bigquery = "^3.11.0"
pandas = "^2.0.0"
numpy = ">=2.0.0,<3.0.0"
dbt-core = "^1.5.0"
dbt-bigquery = "^1.5.0"
prefect = "^2.10.0"
great-expectations = "^0.16.0"
kagglehub = "^0.3.12"
python-dotenv = "^1.0.0"
dotenv = "^0.9.9"
spacy = "^3.8.7"
textblob = "^0.19.0"
newsapi-python = "^0.2.7"
rapidfuzz = "^3.13.0"
transformers = "^4.30.0"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
